Fixed UI bug on Firefox

--- a/web/static/js/UI/Forms/Components/Styles/Input.scss
+++ b/web/static/js/UI/Forms/Components/Styles/Input.scss
@@ -7,6 +7,7 @@
     flex: 1;
     padding: 0 $base-padding;
     min-height: $form-min-height;
+    box-shadow: none;
     line-height: $line-height-input;
     font-size: $font-size-large;
     letter-spacing: $letter-spacing-spaced;
